# wb

./: .clang-format  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.sample.json  HACKING.md  LICENSE.txt  README.md  references.bib
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/tree/: node.hpp  tree.hpp
include/wb/: node.hpp  tree.hpp
test/: CMakeLists.txt
test/source/: test_tree.cpp
